--- a/style.css
+++ b/style.css
@@ -38,3 +38,55 @@
     font-weight: 400;
     cursor: pointer;
 }
+.hero {
+    display: flex;
+}
+.hero_left_title {
+    padding-top: 243px;
+    padding-left: 163px;
+    width: 539px;
+    font-family: "Roboto", sans-serif;
+    color: #091133;
+    font-size: 50px;
+    font-weight: 500;
+}
+.hero_left_text {
+    padding-left: 163px;
+    padding-top: 20px;
+    width: 539px;
+    font-family: "Roboto", sans-serif;
+    color: #505F98;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.hero_left_btn {
+    background-color: #111B47;
+    border: none;
+    border-radius: 2px;
+    margin-top: 69px;
+    margin-left: 163px;
+    width: 190px;
+    height: 36px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    cursor: pointer;
+}
+.hero_left_btn2 {
+    background: none;
+    margin-left: 30px;
+    width: 190px;
+    height: 36px;
+    border: 2px solid #091133;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: #091133;
+    cursor: pointer;
+}
+.hero_img {
+    padding-top: 185px;
+    padding-left: 80px;
+}
