--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
 }
 .hero {
     display: flex;
+    height: 965px;
 }
 .hero_left_title {
     padding-top: 243px;
@@ -89,4 +90,85 @@
 .hero_img {
     padding-top: 185px;
     padding-left: 80px;
+}
+
+.light {
+    display: flex;
+}
+.light_left_title {
+    padding-top: 243px;
+    padding-left: 163px;
+    width: 539px;
+    font-family: "Roboto", sans-serif;
+    color: #091133;
+    font-size: 50px;
+    font-weight: 500;
+}
+.light_left_text {
+    padding-left: 163px;
+    padding-top: 20px;
+    width: 539px;
+    font-family: "Roboto", sans-serif;
+    color: #505F98;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.light_left_btn {
+    background-color: #111B47;
+    border: none;
+    border-radius: 2px;
+    margin-top: 69px;
+    margin-left: 163px;
+    width: 190px;
+    height: 36px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    cursor: pointer;
+}
+.light_left_btn2 {
+    background: none;
+    margin-left: 30px;
+    width: 190px;
+    height: 36px;
+    border: 2px solid #091133;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: #091133;
+    cursor: pointer;
+}
+.light_img {
+    width: 540px;
+    height: 524px;
+    margin-top: 109px;
+    margin-left: 200px;
+}
+.light_left_bottom {
+    display: flex;
+    margin-top: 80px;
+    margin-left: 165px;
+    column-gap: 30px;
+}
+.light_left_bottom_img {
+    width: 36px;
+}
+.light_left_bottom_title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16;
+    color: #091133;
+    width: 255px;
+    padding-top: 14px;
+}
+.light_left_bottom_text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 12;
+    color: #5D6970;
+    width: 255px;
+    padding-top: 6px;
+    line-height: 18px;
 }
