--- a/style.css
+++ b/style.css
@@ -114,32 +114,6 @@
     font-weight: 400;
     line-height: 30px;
 }
-.light_left_btn {
-    background-color: #111B47;
-    border: none;
-    border-radius: 2px;
-    margin-top: 69px;
-    margin-left: 163px;
-    width: 190px;
-    height: 36px;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: white;
-    cursor: pointer;
-}
-.light_left_btn2 {
-    background: none;
-    margin-left: 30px;
-    width: 190px;
-    height: 36px;
-    border: 2px solid #091133;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: #091133;
-    cursor: pointer;
-}
 .light_img {
     width: 540px;
     height: 524px;
@@ -171,4 +145,34 @@
     width: 255px;
     padding-top: 6px;
     line-height: 18px;
+}
+.fast {
+    display: flex;
+    margin-top: 108px;
+    height: 569px;
+}
+.fast_img {
+    width: 480px;
+    height: 315px;
+    margin-left: 176px;
+    margin-top: 122px;
+}
+.fast_right_title {
+    padding-top: 243px;
+    padding-left: 163px;
+    width: 539px;
+    font-family: "Roboto", sans-serif;
+    color: #091133;
+    font-size: 50px;
+    font-weight: 500;
+}
+.fast_right_text {
+    padding-left: 163px;
+    padding-top: 20px;
+    width: 539px;
+    font-family: "Roboto", sans-serif;
+    color: #505F98;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
 }
