--- a/style.css
+++ b/style.css
@@ -251,3 +251,70 @@
     font-size: 14px;
     font-weight: 400;
 }
+
+.pricing {
+    background-color: #E7ECFF;
+    height: 796px;
+}
+.pricing_title {
+    padding-top: 229px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #091133;
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 48px;
+}
+.pricing_text {
+    width: 600px;
+    padding-top: 16px;
+    padding-left: 420px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #6F7CB2;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+.pricing_product_price {
+    padding-top: 35px;
+    padding-right: 15px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #222F65;
+    font-size: 50px;
+    font-weight: 500;
+    line-height: 66px;
+}
+.pricing_product_name {
+    padding-right: 15px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #37447E;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+.pricing_text2 {
+    padding-top: 60px;
+    padding-right: 15px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #5D6970;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+}
+.pricing_btn {
+    margin-top: 9px;
+    margin-left: 640px;
+    background-color: #111B47;
+    border: none;
+    width: 189px;
+    height: 32px;
+    font-family: "Roboto", sans-serif;
+    color: white;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+}
