--- a/style.css
+++ b/style.css
@@ -1,387 +1,398 @@
-/*
-
-*/
 .header {
-    display: flex;
+  display: flex;
 }
 .header_nav {
-    display: flex;
-    justify-content: space-between;
-    column-gap: 60px;
-    padding-top: 18px;
-    padding-left: 165px;
+  display: flex;
+  justify-content: space-between;
+  -moz-column-gap: 60px;
+       column-gap: 60px;
+  padding-top: 18px;
+  padding-left: 165px;
 }
 .header_nav_link {
-    font-family: "Roboto", sans-serif;
-    color: #505F98;
-    font-size: 14px;
-    font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  color: #505F98;
+  font-size: 14px;
+  font-weight: 400;
 }
 .header_logo {
-    font-family: "Roboto", sans-serif;
-    color: #37447E;
-    font-size: 26px;
-    font-weight: 900;
-    padding-left: 271px;
-    padding-top: 12px;
+  font-family: "Roboto", sans-serif;
+  color: #37447E;
+  font-size: 26px;
+  font-weight: 900;
+  padding-left: 271px;
+  padding-top: 12px;
 }
 .header_btn {
-    margin-top: 10px;
-    margin-left: 339px;
-    width: 160px;
-    height: 26px;
-    background-color: #111B47;
-    color: white;
-    border: none;
-    font-family: "Roboto", sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    cursor: pointer;
+  margin-top: 10px;
+  margin-left: 339px;
+  width: 160px;
+  height: 26px;
+  background-color: #111B47;
+  color: white;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
 }
+
 .hero {
-    display: flex;
-    height: 965px;
+  display: flex;
+  height: 965px;
 }
 .hero_left_title {
-    padding-top: 243px;
-    padding-left: 163px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #091133;
-    font-size: 50px;
-    font-weight: 500;
+  padding-top: 243px;
+  padding-left: 163px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #091133;
+  font-size: 50px;
+  font-weight: 500;
 }
 .hero_left_text {
-    padding-left: 163px;
-    padding-top: 20px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #505F98;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
+  padding-left: 163px;
+  padding-top: 20px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #505F98;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
 }
 .hero_left_btn {
-    background-color: #111B47;
-    border: none;
-    border-radius: 2px;
-    margin-top: 69px;
-    margin-left: 163px;
-    width: 190px;
-    height: 36px;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: white;
-    cursor: pointer;
+  background-color: #111B47;
+  border: none;
+  border-radius: 2px;
+  margin-top: 69px;
+  margin-left: 163px;
+  width: 190px;
+  height: 36px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+  cursor: pointer;
 }
 .hero_left_btn2 {
-    background: none;
-    margin-left: 30px;
-    width: 190px;
-    height: 36px;
-    border: 2px solid #091133;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: #091133;
-    cursor: pointer;
+  background: none;
+  margin-left: 30px;
+  width: 190px;
+  height: 36px;
+  border: 2px solid #091133;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #091133;
+  cursor: pointer;
 }
 .hero_img {
-    padding-top: 185px;
-    padding-left: 80px;
+  width: 753px;
+  height: 753px;
+  margin-top: 185px;
+  margin-left: 91px;
 }
 
 .light {
-    display: flex;
+  display: flex;
 }
 .light_left_title {
-    padding-top: 243px;
-    padding-left: 163px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #091133;
-    font-size: 50px;
-    font-weight: 500;
+  padding-top: 243px;
+  padding-left: 163px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #091133;
+  font-size: 50px;
+  font-weight: 500;
 }
 .light_left_text {
-    padding-left: 163px;
-    padding-top: 20px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #505F98;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-}
-.light_img {
-    width: 540px;
-    height: 524px;
-    margin-top: 109px;
-    margin-left: 200px;
+  padding-left: 163px;
+  padding-top: 20px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #505F98;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
 }
 .light_left_bottom {
-    display: flex;
-    margin-top: 80px;
-    margin-left: 165px;
-    column-gap: 30px;
+  display: flex;
+  margin-top: 80px;
+  margin-left: 165px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
 }
 .light_left_bottom_img {
-    width: 36px;
+  width: 36px;
 }
 .light_left_bottom_title {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16;
-    color: #091133;
-    width: 255px;
-    padding-top: 14px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16;
+  color: #091133;
+  width: 255px;
+  padding-top: 14px;
 }
 .light_left_bottom_text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 12;
-    color: #5D6970;
-    width: 255px;
-    padding-top: 6px;
-    line-height: 18px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12;
+  color: #5D6970;
+  width: 255px;
+  padding-top: 6px;
+  line-height: 18px;
+}
+.light_img {
+  width: 540px;
+  height: 524px;
+  margin-top: 109px;
+  margin-left: 200px;
 }
 
 .fast {
-    display: flex;
-    margin-top: 108px;
-    height: 569px;
+  display: flex;
+  margin-top: 108px;
+  height: 569px;
 }
 .fast_img {
-    width: 480px;
-    height: 315px;
-    margin-left: 176px;
-    margin-top: 122px;
+  width: 480px;
+  height: 315px;
+  margin-left: 176px;
+  margin-top: 122px;
 }
 .fast_right_title {
-    padding-top: 243px;
-    padding-left: 163px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #091133;
-    font-size: 50px;
-    font-weight: 500;
+  padding-top: 243px;
+  padding-left: 163px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #091133;
+  font-size: 50px;
+  font-weight: 500;
 }
 .fast_right_text {
-    padding-left: 163px;
-    padding-top: 20px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #505F98;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
+  padding-left: 163px;
+  padding-top: 20px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #505F98;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
 }
 
 .fast1 {
-    display: flex;
-    height: 569px;
+  display: flex;
+  height: 569px;
 }
 .fast1_img {
-    width: 540px;
-    height: 387px;
-    margin-left: 161px;
-    margin-top: 122px;
+  width: 540px;
+  height: 387px;
+  margin-left: 161px;
+  margin-top: 122px;
 }
 .fast1_right_title {
-    padding-top: 243px;
-    padding-left: 125px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #091133;
-    font-size: 50px;
-    font-weight: 500;
+  padding-top: 243px;
+  padding-left: 125px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #091133;
+  font-size: 50px;
+  font-weight: 500;
 }
 .fast1_right_text {
-    padding-left: 125px;
-    padding-top: 20px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #505F98;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
+  padding-left: 125px;
+  padding-top: 20px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #505F98;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
 }
 
 .fast2 {
-    display: flex;
-    margin-top: 108px;
-    height: 569px;
+  display: flex;
+  margin-top: 108px;
+  height: 569px;
 }
 .fast2_img {
-    width: 445px;
-    height: 325px;
-    margin-left: 209px;
-    margin-top: 122px;
+  width: 445px;
+  height: 325px;
+  margin-left: 209px;
+  margin-top: 122px;
 }
 .fast2_right_title {
-    padding-top: 125px;
-    padding-left: 172px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #091133;
-    font-size: 50px;
-    font-weight: 500;
+  padding-top: 125px;
+  padding-left: 172px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #091133;
+  font-size: 50px;
+  font-weight: 500;
 }
 .fast2_right_text {
-    padding-left: 172px;
-    padding-top: 20px;
-    width: 539px;
-    font-family: "Roboto", sans-serif;
-    color: #505F98;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
+  padding-left: 172px;
+  padding-top: 20px;
+  width: 539px;
+  font-family: "Roboto", sans-serif;
+  color: #505F98;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
 }
 .fast2_btn {
-    margin-left: 172px;
-    margin-top: 41px;
-    background-color: #111B47;
-    border: none;
-    border-radius: 2px;
-    width: 150px;
-    height: 33px;
-    font-family: "Roboto", sans-serif;
-    color: white;
-    font-size: 14px;
-    font-weight: 400;
+  margin-left: 172px;
+  margin-top: 41px;
+  background-color: #111B47;
+  border: none;
+  border-radius: 2px;
+  width: 150px;
+  height: 33px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .pricing {
-    background-color: #FBFBFD;
-    height: 796px;
+  background-color: #FBFBFD;
+  height: 796px;
 }
 .pricing_title {
-    padding-top: 229px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #091133;
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 48px;
+  padding-top: 229px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #091133;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 48px;
 }
 .pricing_text {
-    width: 600px;
-    padding-top: 16px;
-    padding-left: 420px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #6F7CB2;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
+  width: 600px;
+  padding-top: 16px;
+  padding-left: 420px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #6F7CB2;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
 }
 .pricing_product_price {
-    padding-top: 35px;
-    padding-right: 15px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #222F65;
-    font-size: 50px;
-    font-weight: 500;
-    line-height: 66px;
+  padding-top: 35px;
+  padding-right: 15px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #222F65;
+  font-size: 50px;
+  font-weight: 500;
+  line-height: 66px;
 }
 .pricing_product_name {
-    padding-right: 15px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #37447E;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
+  padding-right: 15px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #37447E;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
 }
 .pricing_text2 {
-    padding-top: 60px;
-    padding-right: 15px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #5D6970;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 26px;
+  padding-top: 60px;
+  padding-right: 15px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #5D6970;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 26px;
 }
 .pricing_btn {
-    margin-top: 9px;
-    margin-left: 640px;
-    background-color: #111B47;
-    border: none;
-    width: 189px;
-    height: 32px;
-    font-family: "Roboto", sans-serif;
-    color: white;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
+  margin-top: 9px;
+  margin-left: 640px;
+  background-color: #111B47;
+  border: none;
+  width: 189px;
+  height: 32px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
 }
+
 .footer {
-    height: 216px;
-    background-color: #E7ECFF;
+  height: 216px;
+  background-color: #E7ECFF;
 }
 .footer_up {
-    margin: 0 auto;
-    display: flex;
-    width: 1110px;
-    justify-content: space-between;
+  margin: 0 auto;
+  display: flex;
+  width: 1110px;
+  justify-content: space-between;
 }
 .footer_up_copyright {
-    padding-top: 68px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #939EA4;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 24px;
+  padding-top: 68px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #939EA4;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
 }
 .footer_up_logo {
-    padding-top: 61px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #37447E;
-    font-size: 26px;
-    font-weight: 800;
-    line-height: 38px;
+  padding-top: 61px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #37447E;
+  font-size: 26px;
+  font-weight: 800;
+  line-height: 38px;
 }
 .footer_up_btn {
-    margin-top: 71px;
-    background-color: #111B47;
-    border: none;
-    border-radius: 2px;
-    width: 109px;
-    height: 26px;
-    font-family: "Roboto", sans-serif;
-    color: white;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 18px;
+  margin-top: 71px;
+  background-color: #111B47;
+  border: none;
+  border-radius: 2px;
+  width: 109px;
+  height: 26px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
 }
-
 .footer_line {
-    width: 1110px;
-    color: #CDD1D4;
-    margin-left: 185px;
+  width: 1110px;
+  color: #CDD1D4;
+  margin-left: 185px;
 }
-
 .footer_bottom {
-    margin: 0 auto;
-    width: 1110px;
-    display: flex;
-    justify-content: space-between;
+  margin: 0 auto;
+  width: 1110px;
+  display: flex;
+  justify-content: space-between;
 }
 .footer_bottom_nav {
-    display: flex;
-    column-gap: 60px;
+  display: flex;
+  -moz-column-gap: 60px;
+       column-gap: 60px;
 }
 .footer_bottom_nav_link {
-    text-decoration: none;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: #929ECC;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 24px;
+  text-decoration: none;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #929ECC;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
 }
+.footer_bottom_right {
+  display: flex;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+.footer_bottom_right_svg {
+  width: 16px;
+  height: 16px;
+}/*# sourceMappingURL=style.css.map */
