Sorted all images

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@
 }
 .light_left_bottom_img {
   width: 36px;
+  height: 36px;
 }
 .light_left_bottom_title {
   font-family: "Roboto", sans-serif;
