--- a/style.scss
+++ b/style.scss
@@ -138,6 +138,7 @@ $Roboto: "Roboto", sans-serif;
 
             &_img {
             width: 36px;
+            height: 36px;
             }
     
             &_title {
