--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,11 @@
 $Roboto: "Roboto", sans-serif;
 
+@mixin text($font, $color, $size, $weight) {
+    font-family: $font;
+    color: $color;
+    font-size: $size;
+    font-weight: $weight;
+}
 .header {
     display: flex;
 
@@ -11,33 +17,24 @@ $Roboto: "Roboto", sans-serif;
     padding-left: 165px;
 
         &_link {
-        font-family: $Roboto;
-        color: #505F98;
-        font-size: 14px;
-        font-weight: 400;
+            @include text($Roboto, #505F98, 14px, 400);
         }
     }
 
     &_logo {
-    font-family: $Roboto;
-    color: #37447E;
-    font-size: 26px;
-    font-weight: 900;
+        @include text($Roboto, #37447E, 26px, 900);
     padding-left: 271px;
     padding-top: 12px;
     }
 
     &_btn {
+        @include text($Roboto, white, 12px, 400);
     margin-top: 10px;
     margin-left: 339px;
     width: 160px;
     height: 26px;
     background-color: #111B47;
-    color: white;
     border: none;
-    font-family: $Roboto;
-    font-size: 12px;
-    font-weight: 400;
     cursor: pointer;
     }
 }
@@ -48,27 +45,22 @@ $Roboto: "Roboto", sans-serif;
     &_left {
 
         &_title {
+            @include text($Roboto, #091133, 50px, 500);
         padding-top: 243px;
         padding-left: 163px;
         width: 539px;
-        font-family: $Roboto;
-        color: #091133;
-        font-size: 50px;
-        font-weight: 500;
         }
 
         &_text {
+            @include text($Roboto, #505F98, 18px, 400);
         padding-left: 163px;
         padding-top: 20px;
         width: 539px;
-        font-family: $Roboto;
-        color: #505F98;
-        font-size: 18px;
-        font-weight: 400;
         line-height: 30px;
         }
 
         &_btn {
+            @include text($Roboto, white, 16px, 500);
         background-color: #111B47;
         border: none;
         border-radius: 2px;
@@ -76,23 +68,16 @@ $Roboto: "Roboto", sans-serif;
         margin-left: 163px;
         width: 190px;
         height: 36px;
-        font-family: $Roboto;
-        font-size: 16px;
-        font-weight: 500;
-        color: white;
         cursor: pointer;
         }
 
         &_btn2 {
+            @include text($Roboto, #091133, 16px, 500);
         background: none;
         margin-left: 30px;
         width: 190px;
         height: 36px;
         border: 2px solid #091133;
-        font-family: $Roboto;
-        font-size: 16px;
-        font-weight: 500;
-        color: #091133;
         cursor: pointer;
         }
     }
@@ -110,23 +95,17 @@ $Roboto: "Roboto", sans-serif;
     &_left {
 
         &_title {
+            @include text($Roboto, #091133, 50px, 500);
         padding-top: 243px;
         padding-left: 163px;
         width: 539px;
-        font-family: $Roboto;
-        color: #091133;
-        font-size: 50px;
-        font-weight: 500;
         }
 
         &_text {
+            @include text($Roboto, #505F98, 18px, 400);
         padding-left: 163px;
         padding-top: 20px;
         width: 539px;
-        font-family: $Roboto;
-        color: #505F98;
-        font-size: 18px;
-        font-weight: 400;
         line-height: 30px;
         }
         
@@ -142,19 +121,13 @@ $Roboto: "Roboto", sans-serif;
             }
     
             &_title {
-            font-family: $Roboto;
-            font-weight: 500;
-            font-size: 16;
-            color: #091133;
+                @include text($Roboto, #091133, 16px, 400);
             width: 255px;
             padding-top: 14px;
             }
     
             &_text {
-            font-family: $Roboto;
-            font-weight: 400;
-            font-size: 12;
-            color: #5D6970;
+                @include text($Roboto, #5D6970, 12px, 400);
             width: 255px;
             padding-top: 6px;
             line-height: 18px;
@@ -184,23 +157,17 @@ $Roboto: "Roboto", sans-serif;
     &_right {
 
         &_title {
+            @include text($Roboto, #091133, 50px, 500);
         padding-top: 243px;
         padding-left: 163px;
         width: 539px;
-        font-family: $Roboto;
-        color: #091133;
-        font-size: 50px;
-        font-weight: 500;
         }
         
         &_text {
+            @include text($Roboto, #505F98, 18px, 400);
         padding-left: 163px;
         padding-top: 20px;
         width: 539px;
-        font-family: $Roboto;
-        color: #505F98;
-        font-size: 18px;
-        font-weight: 400;
         line-height: 30px;
         }
     }
@@ -220,23 +187,17 @@ $Roboto: "Roboto", sans-serif;
     &_right {
 
         &_title {
+            @include text($Roboto, #091133, 50px, 500);
         padding-top: 243px;
         padding-left: 125px;
         width: 539px;
-        font-family: $Roboto;
-        color: #091133;
-        font-size: 50px;
-        font-weight: 500;
         }
         
         &_text {
+            @include text($Roboto, #505F98, 19px, 400);
         padding-left: 125px;
         padding-top: 20px;
         width: 539px;
-        font-family: $Roboto;
-        color: #505F98;
-        font-size: 18px;
-        font-weight: 400;
         line-height: 30px;
         }
     }
@@ -257,28 +218,23 @@ $Roboto: "Roboto", sans-serif;
     &_right {
         
         &_title {
+            @include text($Roboto, #091133, 50px, 500);
         padding-top: 125px;
         padding-left: 172px;
         width: 539px;
-        font-family: $Roboto;
-        color: #091133;
-        font-size: 50px;
-        font-weight: 500;
         }
     
         &_text {
+            @include text($Roboto, #505F98, 18px, 400);
         padding-left: 172px;
         padding-top: 20px;
         width: 539px;
-        font-family: $Roboto;
-        color: #505F98;
-        font-size: 18px;
-        font-weight: 400;
         line-height: 30px;
         }
     }
 
     &_btn {
+        @include text($Roboto, white, 14px, 400);
     margin-left: 172px;
     margin-top: 41px;
     background-color: #111B47;
@@ -286,10 +242,6 @@ $Roboto: "Roboto", sans-serif;
     border-radius: 2px;
     width: 150px;
     height: 33px;
-    font-family: $Roboto;
-    color: white;
-    font-size: 14px;
-    font-weight: 400;
     }
 }
 
@@ -298,73 +250,55 @@ $Roboto: "Roboto", sans-serif;
     height: 796px;
 
     &_title {
+        @include text($Roboto, #091133, 36px, 500);
     padding-top: 229px;
     text-align: center;
-    font-family: $Roboto;
-    color: #091133;
-    font-size: 36px;
-    font-weight: 500;
     line-height: 48px;
     }
 
     &_text {
+        @include text($Roboto, #6F7CB2, 16px, 400);
     width: 600px;
     padding-top: 16px;
     padding-left: 420px;
     text-align: center;
-    font-family: $Roboto;
-    color: #6F7CB2;
-    font-size: 16px;
-    font-weight: 400;
     line-height: 26px;
     }
 
     &_product {
 
         &_price {
+            @include text($Roboto, #222F65, 50px, 500);
         padding-top: 35px;
         padding-right: 15px;
         text-align: center;
-        font-family: $Roboto;
-        color: #222F65;
-        font-size: 50px;
-        font-weight: 500;
         line-height: 66px;
         }
 
         &_name {
+            @include text($Roboto, #37447E, 16px, 400);
         padding-right: 15px;
         text-align: center;
-        font-family: $Roboto;
-        color: #37447E;
-        font-size: 16px;
-        font-weight: 400;
         line-height: 26px;
         }
     }
 
     &_text2 {
+        @include text($Roboto, #5D6970, 14px, 400);
     padding-top: 60px;
     padding-right: 15px;
     text-align: center;
-    font-family: $Roboto;
-    color: #5D6970;
-    font-size: 14px;
-    font-weight: 400;
     line-height: 26px;
     }
 
     &_btn {
+        @include text($Roboto, white, 14px, 400);
     margin-top: 9px;
     margin-left: 640px;
     background-color: #111B47;
     border: none;
     width: 189px;
     height: 32px;
-    font-family: $Roboto;
-    color: white;
-    font-size: 14px;
-    font-weight: 400;
     line-height: 24px;
 }
 }
@@ -380,36 +314,27 @@ $Roboto: "Roboto", sans-serif;
     justify-content: space-between;
 
         &_copyright {
+            @include text($Roboto, #939EA4, 14px, 500);
         padding-top: 68px;
         text-align: center;
-        font-family: $Roboto;
-        color: #939EA4;
-        font-size: 14px;
-        font-weight: 500;
         line-height: 24px;
         }
 
         &_logo {
+            @include text($Roboto, #37447E, 26px, 800);
         padding-top: 61px;
         text-align: center;
-        font-family: $Roboto;
-        color: #37447E;
-        font-size: 26px;
-        font-weight: 800;
         line-height: 38px;
         }
 
         &_btn {
+            @include text($Roboto, white, 12px, 500);
         margin-top: 71px;
         background-color: #111B47;
         border: none;
         border-radius: 2px;
         width: 109px;
         height: 26px;
-        font-family: $Roboto;
-        color: white;
-        font-size: 12px;
-        font-weight: 500;
         line-height: 18px;
         }
     }
@@ -431,12 +356,9 @@ $Roboto: "Roboto", sans-serif;
         column-gap: 60px;
         
         &_link {
+                @include text($Roboto, #929ECC, 14px, 500);
             text-decoration: none;
             text-align: center;
-            font-family: $Roboto;
-            color: #929ECC;
-            font-size: 14px;
-            font-weight: 500;
             line-height: 24px;
         }
     }
