--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ $Roboto: "Roboto", sans-serif;
     display: flex;
 
     &_nav {
-        @mixin padding(18px, 165px);
+        @include padding(18px, 165px);
     display: flex;
     justify-content: space-between;
     column-gap: 60px;
@@ -32,12 +32,12 @@ $Roboto: "Roboto", sans-serif;
     }
 
     &_logo {
-        @mixin padding(271px, 12px);
+        @include padding(271px, 12px);
         @include text($Roboto, #37447E, 26px, 900, auto);
     }
 
     &_btn {
-        @mixin margin(10px, 339px);
+        @include margin(10px, 339px);
         @include text($Roboto, white, 12px, 400, auto);
     width: 160px;
     height: 26px;
@@ -53,19 +53,19 @@ $Roboto: "Roboto", sans-serif;
     &_left {
 
         &_title {
-            @mixin padding(243px, 163px);
+            @include padding(243px, 163px);
             @include text($Roboto, #091133, 50px, 500, auto);
         width: 539px;
         }
 
         &_text {
-            @mixin padding(20px, 163px);
+            @include padding(20px, 163px);
             @include text($Roboto, #505F98, 18px, 400, 30px, auto);
         width: 539px;
         }
 
         &_btn {
-            @mixin margin(69px, 163px);
+            @include margin(69px, 163px);
             @include text($Roboto, white, 16px, 500, auto);
         background-color: #111B47;
         border: none;
@@ -76,7 +76,7 @@ $Roboto: "Roboto", sans-serif;
         }
 
         &_btn2 {
-            @mixin margin(auto, 30px);
+            @include margin(auto, 30px);
             @include text($Roboto, #091133, 16px, 500, auto);
         background: none;
         width: 190px;
@@ -87,7 +87,7 @@ $Roboto: "Roboto", sans-serif;
     }
 
     &_img {
-        @mixin margin(185px, 91px);
+        @include margin(185px, 91px);
     width: 753px;
     height: 753px;
     }
@@ -98,19 +98,19 @@ $Roboto: "Roboto", sans-serif;
     &_left {
 
         &_title {
-            @mixin padding(243px, 163px);
+            @include padding(243px, 163px);
             @include text($Roboto, #091133, 50px, 500, auto);
         width: 539px;
         }
 
         &_text {
-            @mixin padding(20px, 163px);
+            @include padding(20px, 163px);
             @include text($Roboto, #505F98, 18px, 400, 30px, auto);
         width: 539px;
         }
         
         &_bottom {
-            @mixin margin(80px, 165px);
+            @include margin(80px, 165px);
         display: flex;
         column-gap: 30px;
 
@@ -120,13 +120,13 @@ $Roboto: "Roboto", sans-serif;
             }
     
             &_title {
-                @mixin padding(14px, auto);
+                @include padding(14px, auto);
                 @include text($Roboto, #091133, 16px, 400, auto);
             width: 255px;
             }
     
             &_text {
-                @mixin padding(6px, auto);
+                @include padding(6px, auto);
                 @include text($Roboto, #5D6970, 12px, 400, 18px);
             width: 255px;
             }
@@ -134,18 +134,18 @@ $Roboto: "Roboto", sans-serif;
     }
 
     &_img {
-            @mixin margin(109px, 200px);
+            @include margin(109px, 200px);
         width: 540px;
         height: 524px;
     }
 }
 .fast {
-        @mixin margin(108px, auto);
+        @include margin(108px, auto);
     display: flex;
     height: 569px;
 
     &_img {
-        @mixin margin(122px, 176px);
+        @include margin(122px, 176px);
     width: 480px;
     height: 315px;
     }
@@ -153,13 +153,13 @@ $Roboto: "Roboto", sans-serif;
     &_right {
 
         &_title {
-            @mixin padding(243px, 163px);
+            @include padding(243px, 163px);
             @include text($Roboto, #091133, 50px, 500, auto);
         width: 539px;
         }
         
         &_text {
-            @mixin padding(20px, 163px);
+            @include padding(20px, 163px);
             @include text($Roboto, #505F98, 18px, 400, 30px);
         width: 539px;
         }
@@ -171,7 +171,7 @@ $Roboto: "Roboto", sans-serif;
     height: 569px;
 
     &_img {
-        @mixin margin(122px, 161px);
+        @include margin(122px, 161px);
     width: 540px;
     height: 387px;
     }
@@ -179,13 +179,13 @@ $Roboto: "Roboto", sans-serif;
     &_right {
 
         &_title {
-            @mixin padding(243px, 125px);
+            @include padding(243px, 125px);
             @include text($Roboto, #091133, 50px, 500, auto);
         width: 539px;
         }
         
         &_text {
-            @mixin padding(20px, 125px);
+            @include padding(20px, 125px);
             @include text($Roboto, #505F98, 19px, 400, 30px);
         width: 539px;
         }
@@ -193,12 +193,12 @@ $Roboto: "Roboto", sans-serif;
 }
 
 .fast2 {
-        @mixin margin(108px, auto);
+        @include margin(108px, auto);
     display: flex;
     height: 569px;
 
     &_img {
-        @mixin margin(122px, 209px);
+        @include margin(122px, 209px);
     width: 445px;
     height: 325px;
     }
@@ -206,20 +206,20 @@ $Roboto: "Roboto", sans-serif;
     &_right {
         
         &_title {
-            @mixin padding(125px, 172px);
+            @include padding(125px, 172px);
             @include text($Roboto, #091133, 50px, 500, auto);
         width: 539px;
         }
     
         &_text {
-            @mixin padding(20px, 172px);
+            @include padding(20px, 172px);
             @include text($Roboto, #505F98, 18px, 400, 30px);
         width: 539px;
         }
     }
 
     &_btn {
-        @mixin margin(41px, 172px);
+        @include margin(41px, 172px);
         @include text($Roboto, white, 14px, 400, auto);
     background-color: #111B47;
     border: none;
@@ -234,13 +234,13 @@ $Roboto: "Roboto", sans-serif;
     height: 796px;
 
     &_title {
-        @mixin padding(229px, auto);
+        @include padding(229px, auto);
         @include text($Roboto, #091133, 36px, 500, 48px);
     text-align: center;
     }
 
     &_text {
-        @mixin padding(16px, 420px);
+        @include padding(16px, 420px);
         @include text($Roboto, #6F7CB2, 16px, 400, 26px);
     width: 600px;
     text-align: center;
@@ -249,7 +249,7 @@ $Roboto: "Roboto", sans-serif;
     &_product {
 
         &_price {
-            @mixin padding(35px, 15px);
+            @include padding(35px, 15px);
             @include text($Roboto, #222F65, 50px, 500, 66px);
         text-align: center;
         }
@@ -262,14 +262,14 @@ $Roboto: "Roboto", sans-serif;
     }
 
     &_text2 {
-        @mixin padding(60px, auto);
+        @include padding(60px, auto);
         @include text($Roboto, #5D6970, 14px, 400, 26px);
     padding-right: 15px;
     text-align: center;
     }
 
     &_btn {
-        @mixin margin(9px, 640px);
+        @include margin(9px, 640px);
         @include text($Roboto, white, 14px, 400, 24px);
     background-color: #111B47;
     border: none;
@@ -289,19 +289,19 @@ $Roboto: "Roboto", sans-serif;
     justify-content: space-between;
 
         &_copyright {
-            @mixin padding(68px, auto);
+            @include padding(68px, auto);
             @include text($Roboto, #939EA4, 14px, 500, 24px);
         text-align: center;
         }
 
         &_logo {
-            @mixin padding(61px, auto);
+            @include padding(61px, auto);
             @include text($Roboto, #37447E, 26px, 800, 38px);
         text-align: center;
         }
 
         &_btn {
-            @mixin margin(71px, auto);
+            @include margin(71px, auto);
             @include text($Roboto, white, 12px, 500, 18px);
         background-color: #111B47;
         border: none;
@@ -312,7 +312,7 @@ $Roboto: "Roboto", sans-serif;
     }
 
     &_line {
-        @mixin margin(auto, 185px);
+        @include margin(auto, 185px);
     width: 1110px;
     color: #CDD1D4;
     }
